test/parser/datatypes-missing-equals.b3.expect
Error:
5: datatype BadEquals Ctor()
                      ^
expected '='

